# ml_research_trends

./: .gitignore  OpenAlex.ipynb  README.md  SemanticScholar.ipynb  app.py  app_utils.py  arXiv.ipynb  main.py  pyproject.toml  rag_papers.csv  rag_papers_1071-papers.csv  rag_qwen3_embeddings.npy  reasoning_papers.csv  transformer_embeddings_umap.html  transformer_papers.csv
docs/: _config.yml  documentation.md  index.md  report.md  tutorial.md
local_data/: multimodal_vlm_papers.csv  rag_papers.csv  run.py
local_data/rag/: rag_embeddings_umap.html  rag_papers.csv
ml_research_trends/: __init__.py  data.py  visualization.py
package/: data.py
pages/: 1_Trends_Over_Time.py  2_Topic_Embeddings.py
