[project]
name = "ml-research-trends"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "ipykernel>=7.2.0",
    "ollama>=0.6.1",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "matplotlib>=3.7.0",
    "tqdm>=4.67.3",
]
